// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineError is extendable by InlineError face 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 600;
}

<div
    aria-live="polite"
    class="emotion-0"
    data-toastmanager="true"
  />
  .emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  -webkit-align-self: baseline;
  -ms-flex-item-align: baseline;
  align-self: baseline;
  margin-right: 8px;
}

.emotion-0::before {
  content: "\\200b";
}

.emotion-0 svg {
  height: 1em;
  vertical-align: middle;
  width: auto;
}

.emotion-1 {
  color: rgb(0,0,255);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  line-height: inherit;
}

<div
    class="emotion-1"
  >
    <div
      class="emotion-0"
    >
      <svg
        focusable="false"
        viewBox="0 0 20 20"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M-2-2h24v24H-2z"
          />
          <path
            d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 15H9v-2h2v2zm0-4H9V5h2v6z"
            fill="currentColor"
          />
        </g>
      </svg>
    </div>
    This is an error
  </div>
</DocumentFragment>
`;

exports[`InlineError is extendable by InlineErrorIcon face 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 600;
}

<div
    aria-live="polite"
    class="emotion-0"
    data-toastmanager="true"
  />
  .emotion-1 {
  color: rgb(255,0,0);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  line-height: inherit;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  -webkit-align-self: baseline;
  -ms-flex-item-align: baseline;
  align-self: baseline;
  margin-right: 8px;
  color: rgb(0,0,255);
}

.emotion-0::before {
  content: "\\200b";
}

.emotion-0 svg {
  height: 1em;
  vertical-align: middle;
  width: auto;
}

<div
    class="emotion-1"
  >
    <div
      class="emotion-0"
    >
      <svg
        focusable="false"
        viewBox="0 0 20 20"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M-2-2h24v24H-2z"
          />
          <path
            d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 15H9v-2h2v2zm0-4H9V5h2v6z"
            fill="currentColor"
          />
        </g>
      </svg>
    </div>
    This is an error
  </div>
</DocumentFragment>
`;

exports[`InlineError is extendable by styles prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 600;
}

<div
    aria-live="polite"
    class="emotion-0"
    data-toastmanager="true"
  />
  .emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  -webkit-align-self: baseline;
  -ms-flex-item-align: baseline;
  align-self: baseline;
  margin-right: 8px;
}

.emotion-0::before {
  content: "\\200b";
}

.emotion-0 svg {
  height: 1em;
  vertical-align: middle;
  width: auto;
}

.emotion-1 {
  color: rgb(0,0,255);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  line-height: inherit;
}

<div
    class="emotion-1"
  >
    <div
      class="emotion-0"
    >
      <svg
        focusable="false"
        viewBox="0 0 20 20"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M-2-2h24v24H-2z"
          />
          <path
            d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 15H9v-2h2v2zm0-4H9V5h2v6z"
            fill="currentColor"
          />
        </g>
      </svg>
    </div>
    This is an error
  </div>
</DocumentFragment>
`;

exports[`InlineError renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 600;
}

<div
    aria-live="polite"
    class="emotion-0"
    data-toastmanager="true"
  />
  .emotion-1 {
  color: rgb(255,0,0);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: inherit;
  line-height: inherit;
}

.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: inherit;
  line-height: inherit;
  -webkit-align-self: baseline;
  -ms-flex-item-align: baseline;
  align-self: baseline;
  margin-right: 8px;
}

.emotion-0::before {
  content: "\\200b";
}

.emotion-0 svg {
  height: 1em;
  vertical-align: middle;
  width: auto;
}

<div
    class="emotion-1"
  >
    <div
      class="emotion-0"
    >
      <svg
        focusable="false"
        viewBox="0 0 20 20"
      >
        <g
          fill="none"
          fill-rule="evenodd"
        >
          <path
            d="M-2-2h24v24H-2z"
          />
          <path
            d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 15H9v-2h2v2zm0-4H9V5h2v6z"
            fill="currentColor"
          />
        </g>
      </svg>
    </div>
    This is an error
  </div>
</DocumentFragment>
`;
